--- a/config/services.yaml
+++ b/config/services.yaml
@@ -21,5 +21,10 @@ services:
             - '../src/Kernel.php'
             - '../src/Tests/'
 
-    # add more service definitions when explicit configuration is needed
-    # please note that last definitions always *replace* previous ones
+    App\EventListener\EventListener:
+        tags: 
+            -   name: 'doctrine.event_listener'
+                event: 'postPersist'
+            
+            -   name: 'doctrine.event_listener'
+                event: 'postUpdate'
